--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
+
 <html>
    <head>
       <title>My Cool Website</title>
    </head>
    <body>
-      <h1>Welcome to my website! ⭐️</h1>
+      <h1>Welcome to my website! yo⭐️</h1>
       <p>How was your day? 🎉</p>
    </body>
 </html>
