--- a/index.html
+++ b/index.html
@@ -1,11 +1,38 @@
 <!DOCTYPE html>
-
 <html>
-   <head>
-      <title>My Cool Website</title>
-   </head>
-   <body>
-      <h1>Welcome to my website! yo⭐️</h1>
-      <p>How was your day? 🎉</p>
-   </body>
+  <head>
+    <title>brat</title>
+    <style>
+      @import url('https://fonts.googleapis.com/css2?family=Inter:wght@700&display=swap');
+
+      body {
+        background-color: #d0ff00; /* neon slime green */
+        font-family: 'Inter', sans-serif;
+        margin: 0;
+        padding: 0;
+        color: black;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        height: 100vh;
+        text-transform: lowercase;
+        letter-spacing: -0.03em;
+      }
+
+      h1 {
+        font-size: 7vw;
+        margin: 0;
+      }
+
+      p {
+        font-size: 3vw;
+        margin-top: 1rem;
+      }
+    </style>
+  </head>
+  <body>
+    <h1>welcome to my website! yo⭐️</h1>
+    <p>how was your day? 🎉</p>
+  </body>
 </html>
