--- a/index.html
+++ b/index.html
@@ -3,11 +3,9 @@
   <head>
     <title>brat</title>
     <style>
-      @import url('https://fonts.googleapis.com/css2?family=Inter:wght@700&display=swap');
-
       body {
-        background-color: #d0ff00; /* neon slime green */
-        font-family: 'Inter', sans-serif;
+        background-color: #89CC04;
+        font-family: Arial, sans-serif;
         margin: 0;
         padding: 0;
         color: black;
@@ -23,6 +21,7 @@
       h1 {
         font-size: 7vw;
         margin: 0;
+        transform: scaleX(0.7); /* squishes text horizontally */
       }
 
       p {
@@ -32,7 +31,6 @@
     </style>
   </head>
   <body>
-    <h1>welcome to my website! yo⭐️</h1>
-    <p>how was your day? 🎉</p>
+    <h1>no.</h1>
   </body>
 </html>
