--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         font-size: 7vw;
         margin: 0;
         transform: scaleX(0.7); /* squishes text horizontally */
+        font-weight: normal; /* removes bold */
       }
 
       p {
@@ -31,6 +32,6 @@
     </style>
   </head>
   <body>
-    <h1>no.</h1>
+    <h1>brat.</h1>
   </body>
 </html>
