--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         margin: 0;
         transform: scaleX(0.7); /* squishes text horizontally */
         font-weight: normal; /* removes bold */
+        filter: blur(2px); /* adds the blur effect */
       }
 
       p {
