--- a/index.html
+++ b/index.html
@@ -23,16 +23,18 @@
         margin: 0;
         transform: scaleX(0.7); /* squishes text horizontally */
         font-weight: normal; /* removes bold */
-        filter: blur(2px); /* adds the blur effect */
+        filter: blur(2px); /* adds blur */
       }
 
       p {
         font-size: 3vw;
         margin-top: 1rem;
+        filter: blur(2px); /* adds blur to paragraph */
       }
     </style>
   </head>
   <body>
-    <h1>ho i said don't look.</h1>
+    <h1>rebel.</h1>
+    <p>for all purposes, this as a joke. do not come after me or dox me please and thank you. have a good day. :)</p>
   </body>
 </html>
