--- a/index.html
+++ b/index.html
@@ -30,11 +30,14 @@
         font-size: 3vw;
         margin-top: 1rem;
         filter: blur(2px); /* adds blur to paragraph */
+        text-align: center;
+        margin-left: 2rem;
+        margin-right: 2rem;
       }
     </style>
   </head>
   <body>
-    <h1>rebel.</h1>
+    <h1>you rebel.</h1>
     <p>for all purposes, this as a joke. do not come after me or dox me please and thank you. have a good day. :)</p>
   </body>
 </html>
