--- a/index.html
+++ b/index.html
@@ -38,6 +38,6 @@
   </head>
   <body>
     <h1>you rebel.</h1>
-    <p>for all purposes, this as a joke. do not come after me or dox me please and thank you. have a good day. :)</p>
+    <p>this is a joke. do not dox me please. thank you and have a good day. :)</p>
   </body>
 </html>
