--- a/index.html
+++ b/index.html
@@ -34,10 +34,21 @@
         margin-left: 2rem;
         margin-right: 2rem;
       }
+
+      tiny {
+        font-size: 1vw;
+        margin-top: 1rem;
+        filter: blur(2px); /* adds blur to paragraph */
+        text-align: center;
+        margin-left: 2rem;
+        margin-right: 2rem;
+      }
+      
     </style>
   </head>
   <body>
     <h1>you rebel.</h1>
     <p>this is a joke. do not dox me please. thank you and have a good day. :)</p>
+    <h>my name's blurryface and i care what you think.</h>
   </body>
 </html>
