--- a/index.html
+++ b/index.html
@@ -49,6 +49,6 @@
   <body>
     <h1>you rebel.</h1>
     <p>this is a joke. do not dox me please. thank you and have a good day. :)</p>
-    <h>my name's blurryface and i care what you think.</h>
+    <tiny>my name's blurryface and i care what you think.</tiny>
   </body>
 </html>
