--- a/index.html
+++ b/index.html
@@ -29,26 +29,26 @@
       p {
         font-size: 2vw;
         margin-top: 1rem;
-        filter: blur(2px); /* adds blur to paragraph */
+        filter: blur(2px);
         text-align: center;
         margin-left: 2rem;
         margin-right: 2rem;
       }
 
-      tiny {
+      .tiny {
         font-size: 1vw;
-        margin-top: 1rem;
-        filter: blur(2px); /* adds blur to paragraph */
+        margin-top: auto;
+        margin-bottom: 1rem;
+        filter: blur(2px);
         text-align: center;
         margin-left: 2rem;
         margin-right: 2rem;
       }
-      
     </style>
   </head>
   <body>
     <h1>you rebel.</h1>
     <p>this is a joke. do not dox me please. thank you and have a good day. :)</p>
-    <tiny>my name's blurryface and i care what you think.</tiny>
+    <div class="tiny">my name's blurryface and i care what you think.</div>
   </body>
 </html>
