--- a/index.html
+++ b/index.html
@@ -3,27 +3,38 @@
   <head>
     <title>brat</title>
     <style>
+      html, body {
+        height: 100%;
+        margin: 0;
+        padding: 0;
+      }
+
       body {
         background-color: #89CC04;
         font-family: Arial, sans-serif;
-        margin: 0;
-        padding: 0;
         color: black;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        align-items: center;
+        text-transform: lowercase;
+        letter-spacing: -0.03em;
+      }
+
+      .content {
         display: flex;
         flex-direction: column;
         justify-content: center;
         align-items: center;
-        height: 100vh;
-        text-transform: lowercase;
-        letter-spacing: -0.03em;
+        flex-grow: 1;
       }
 
       h1 {
         font-size: 7vw;
         margin: 0;
-        transform: scaleX(0.7); /* squishes text horizontally */
-        font-weight: normal; /* removes bold */
-        filter: blur(2px); /* adds blur */
+        transform: scaleX(0.7);
+        font-weight: normal;
+        filter: blur(2px);
       }
 
       p {
@@ -37,9 +48,8 @@
 
       .tiny {
         font-size: 1vw;
-        margin-top: auto;
         margin-bottom: 1rem;
-        filter: blur(2px);
+        filter: blur(1px); /* less blur here */
         text-align: center;
         margin-left: 2rem;
         margin-right: 2rem;
@@ -47,8 +57,10 @@
     </style>
   </head>
   <body>
-    <h1>you rebel.</h1>
-    <p>this is a joke. do not dox me please. thank you and have a good day. :)</p>
+    <div class="content">
+      <h1>you rebel.</h1>
+      <p>this is a joke. do not dox me please. thank you and have a good day. :)</p>
+    </div>
     <div class="tiny">my name's blurryface and i care what you think.</div>
   </body>
 </html>
