--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       }
 
       body {
-        background-color: #89CC04;
+        background-color: #8ACE00;
         font-family: Arial, sans-serif;
         color: black;
         display: flex;
